--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "private": true,
   "license": "MIT",
-  "description": "",
+  "description": "Angular directive for updating app via service workers",
   "scripts": {
     "ng": "ng",
     "start:demo": "ng serve",
@@ -40,6 +40,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@angular/service-worker": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
