--- a/projects/ngx-update-app/package.json
+++ b/projects/ngx-update-app/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ngx-update-app",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "peerDependencies": {
     "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "@angular/service-worker": "^17.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
