--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,25 +24,25 @@ jobs:
       - name: 🛠️ Install
         uses: ./.github/actions/cached-deps
 
+      - name: 🛠️ Sync versions
+        run: yarn script:sync-projects
+
       - name: 🌡️ Lint
         run: yarn lint
 
-      - name: 🛠️ Sync versions # Sync versions
-        run: yarn syncprojects
+      - name: 🧪 Run tests
+        run: yarn test --no-watch --no-progress --browsers=ChromeHeadless --code-coverage
 
-      - name: 📦 Build demo app # Build Schematics and move
+      - name: 📦 Build demo app
         run: yarn build:demo --base-href https://celtian.github.io/ngx-update-app/
 
-      - name: 📦 Build ngx-update-app # Build
+      - name: 📦 Build ngx-update-app
         run: yarn build
-
-      - name: 🧪 Run tests
-        run: yarn test --configuration=ci
 
       - name: ⬆️ Upload coverage reports
         uses: codecov/codecov-action@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
           verbose: true
           dry_run: true
