chore(workflows): coverage added

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,7 +31,7 @@ jobs:
         run: yarn lint
 
       - name: 🧪 Run tests
-        run: yarn test --configuration=ci
+        run: yarn test --code-coverage --configuration=ci
 
       - name: ⬆️ Upload coverage reports
         uses: codecov/codecov-action@v3
