chore(workflows): improvement added

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -46,3 +46,16 @@ jobs:
 
       - name: 📦 Build ngx-update-app
         run: yarn build
+
+      # - name: 🚀 Publish NPM
+      #   run: cd dist/ngx-update-app && npm publish --dry-run
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: 🚀 Publish NPM
+        uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.NPM_AUTH_TOKEN }}
+          registry: 'https://npm.pkg.github.com'
+          package: dist/ngx-update-app
+          dry-run: true
