chore(workflows): main workflow added

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,10 +1,5 @@
 name: Test PR
-# 'on': pull_request
-
-on:
-  push:
-    branches:
-      - 'master'
+'on': pull_request
 
 jobs:
   install-and-test:
@@ -47,15 +42,10 @@ jobs:
       - name: 📦 Build ngx-update-app
         run: yarn build
 
-      # - name: 🚀 Publish NPM
-      #   run: cd dist/ngx-update-app && npm publish --dry-run
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-
       - name: 🚀 Publish NPM
         uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_AUTH_TOKEN }}
-          registry: 'https://npm.pkg.github.com'
+          registry: https://npm.pkg.github.com
           package: dist/ngx-update-app
           dry-run: true
