--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,37 +58,37 @@ jobs:
           registry: https://npm.pkg.github.com
           package: dist/ngx-update-app
           dry-run: true
-          tag: ${{ contains(github.ref, 'beta') == true ? 'beta' : 'latest' }}
+#          tag: ${{ contains(github.ref, 'beta') == true ? 'beta' : 'latest' }}
 
-      - name: 🛠️ Set up package for GPR
-      #  if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
-        run: yarn script:gpr-setup
+#      - name: 🛠️ Set up package for GPR
+#      #  if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
+#        run: yarn script:gpr-setup
 
-      - name: 🛠️ Use GPR
-      #  if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-          registry-url: https://npm.pkg.github.com
-          scope: '@celtian'
+#      - name: 🛠️ Use GPR
+#      #  if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 20
+#          registry-url: https://npm.pkg.github.com
+#          scope: '@celtian'
 
-      - name: 🚀 Publish to GitHub Package Registry
-      #  if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
-        uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ github.token }}
-          registry: https://npm.pkg.github.com
-          package: dist/ngx-update-app
-          dry-run: true
+#      - name: 🚀 Publish to GitHub Package Registry
+#      #  if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
+#        uses: JS-DevTools/npm-publish@v3
+#        with:
+#          token: ${{ github.token }}
+#          registry: https://npm.pkg.github.com
+#          package: dist/ngx-update-app
+#          dry-run: true
 
-      - name: 🛠️ Copy index.html to 404.html
-        if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
-        run: cp ./dist/demo/browser/index.html ./dist/demo/browser/404.html
-
-      - name: 🚀 Deploy Github Pages
-        if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_branch: gh-pages
-          publish_dir: ./dist/demo/browser
+#      - name: 🛠️ Copy index.html to 404.html
+#        if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
+#        run: cp ./dist/demo/browser/index.html ./dist/demo/browser/404.html
+#
+#      - name: 🚀 Deploy Github Pages
+#        if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
+#        uses: peaceiris/actions-gh-pages@v3
+#        with:
+#          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+#          publish_branch: gh-pages
+#          publish_dir: ./dist/demo/browser
