--- a/projects/ngx-update-app/package.json
+++ b/projects/ngx-update-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-update-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^17.0.0",
     "@angular/core": "^17.0.0",
@@ -9,5 +9,8 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  }
 }
