--- a/projects/ngx-update-app/package.json
+++ b/projects/ngx-update-app/package.json
@@ -1,10 +1,18 @@
 {
   "name": "ngx-update-app",
   "version": "0.0.1",
+  "author": {
+    "name": "Dominik Hladík",
+    "email": "dominik.hladik@seznam.cz",
+    "url": "https://github.com/Celtian"
+  },
+  "private": false,
+  "license": "MIT",
+  "description": "Angular directive for updating app via service workers",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/service-worker": "^17.0.0"
+    "@angular/common": ">=17",
+    "@angular/core": ">=17",
+    "@angular/service-worker": ">=17"
   },
   "dependencies": {
     "tslib": "^2.3.0"
@@ -12,5 +20,22 @@
   "sideEffects": false,
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
+  },
+  "homepage": "https://github.com/Celtian/ngx-update-app",
+  "repository": {
+    "url": "git+https://github.com/Celtian/ngx-update-app.git",
+    "type": "git"
+  },
+  "bugs": {
+    "url": "https://github.com/Celtian/ngx-update-app/issues"
+  },
+  "keywords": [
+    "angular",
+    "app",
+    "ngx",
+    "update"
+  ],
+  "engines": {
+    "node": ">=18"
   }
 }
