--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,13 +48,13 @@ jobs:
 
       - name: 🚀 Publish NPM
         if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
-        run: cd dist/ngx-upadte-app && npm publish
+        run: cd dist/ngx-update-app && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: 🚀 Publish NPM BETA
         if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == true
-        run: cd dist/ngx-upadte-app && npm publish --tag beta
+        run: cd dist/ngx-update-app && npm publish --tag beta
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
@@ -73,7 +73,7 @@ jobs:
       - name: 🚀 Publish to GitHub Package Registry
         if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
         run: |
-          cd dist/ngx-upadte-app
+          cd dist/ngx-update-app
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{github.token}}
