chore(deps): deps udpated

--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "fix-vulnerabilities": "npx yarn-audit-fix && npx browserslist --update-db"
   },
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
-    "@angular/service-worker": "^17.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "@angular/animations": "^17.0.8",
+    "@angular/common": "^17.0.8",
+    "@angular/compiler": "^17.0.8",
+    "@angular/core": "^17.0.8",
+    "@angular/forms": "^17.0.8",
+    "@angular/platform-browser": "^17.0.8",
+    "@angular/platform-browser-dynamic": "^17.0.8",
+    "@angular/router": "^17.0.8",
+    "@angular/service-worker": "^17.0.8",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -52,29 +52,29 @@
     "@angular-eslint/eslint-plugin-template": "17.1.1",
     "@angular-eslint/schematics": "17.1.1",
     "@angular-eslint/template-parser": "17.1.1",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
+    "@angular/cli": "^17.0.8",
+    "@angular/compiler-cli": "^17.0.8",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/fs-extra": "^11.0.4",
-    "@types/jasmine": "~5.1.0",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
+    "@types/jasmine": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "auto-changelog": "^2.4.0",
-    "eslint": "^8.54.0",
+    "eslint": "^8.56.0",
     "fs-extra": "^11.2.0",
     "husky": "^8.0.3",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
+    "jasmine-core": "^5.1.1",
+    "karma": "^6.4.2",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^15.2.0",
-    "ng-packagr": "^17.0.0",
+    "ng-packagr": "^17.0.3",
     "prettier": "^3.1.1",
     "tsx": "^4.7.0",
-    "typescript": "~5.2.2"
+    "typescript": "5.2.2"
   },
   "peerDependencies": {},
   "homepage": "https://github.com/Celtian/ngx-update-app",
