--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: 🗜️ Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 🗜️ Setup node version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
@@ -26,14 +26,14 @@ jobs:
       - name: 🛠️ Sync versions
         run: yarn script:sync-projects
 
-      - name: 🌡️ Lint
+      - name: 🧹 Lint
         run: yarn lint
 
       - name: 🧪 Run tests
         run: yarn test --code-coverage --configuration=ci
 
       - name: ⬆️ Upload coverage reports
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
@@ -64,7 +64,7 @@ jobs:
 
       - name: 🛠️ Use GPR
         if: startsWith(github.ref, 'refs/tags/v') && contains(github.ref, 'beta') == false
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com
