--- a/package.json
+++ b/package.json
@@ -32,49 +32,49 @@
     "fix-vulnerabilities": "npx yarn-audit-fix && npx browserslist --update-db"
   },
   "dependencies": {
-    "@angular/animations": "^17.0.8",
-    "@angular/common": "^17.0.8",
-    "@angular/compiler": "^17.0.8",
-    "@angular/core": "^17.0.8",
-    "@angular/forms": "^17.0.8",
-    "@angular/platform-browser": "^17.0.8",
-    "@angular/platform-browser-dynamic": "^17.0.8",
-    "@angular/router": "^17.0.8",
-    "@angular/service-worker": "^17.0.8",
+    "@angular/animations": "^17.1.3",
+    "@angular/common": "^17.1.3",
+    "@angular/compiler": "^17.1.3",
+    "@angular/core": "^17.1.3",
+    "@angular/forms": "^17.1.3",
+    "@angular/platform-browser": "^17.1.3",
+    "@angular/platform-browser-dynamic": "^17.1.3",
+    "@angular/router": "^17.1.3",
+    "@angular/service-worker": "^17.1.3",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.8",
-    "@angular-eslint/builder": "17.1.1",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/schematics": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
-    "@angular/cli": "^17.0.8",
-    "@angular/compiler-cli": "^17.0.8",
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@angular-devkit/build-angular": "^17.1.3",
+    "@angular-eslint/builder": "17.2.1",
+    "@angular-eslint/eslint-plugin": "17.2.1",
+    "@angular-eslint/eslint-plugin-template": "17.2.1",
+    "@angular-eslint/schematics": "17.2.1",
+    "@angular-eslint/template-parser": "17.2.1",
+    "@angular/cli": "^17.1.3",
+    "@angular/compiler-cli": "^17.1.3",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "auto-changelog": "^2.4.0",
     "eslint": "^8.56.0",
     "fs-extra": "^11.2.0",
-    "husky": "^8.0.3",
-    "jasmine-core": "^5.1.1",
+    "husky": "^9.0.10",
+    "jasmine-core": "^5.1.2",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "lint-staged": "^15.2.0",
-    "ng-packagr": "^17.0.3",
-    "prettier": "^3.1.1",
-    "tsx": "^4.7.0",
-    "typescript": "5.2.2"
+    "lint-staged": "^15.2.2",
+    "ng-packagr": "^17.1.2",
+    "prettier": "^3.2.5",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {},
   "homepage": "https://github.com/Celtian/ngx-update-app",
@@ -95,7 +95,8 @@
     "dist"
   ],
   "engines": {
-    "node": ">=20 <22"
+    "node": ">=20 <22",
+    "npm": "please-use-yarn"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
