--- a/angular.json
+++ b/angular.json
@@ -2,10 +2,7 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "yarn",
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ]
+    "packageManager": "yarn"
   },
   "newProjectRoot": "projects",
   "projects": {
