--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,15 +1,10 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
   "recommendations": [
     "angular.ng-template",
-    "editorconfig.editorconfig",
-    "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
     "formulahendry.auto-rename-tag",
+    "PKief.material-icon-theme",
     "waderyan.gitblame",
-    "tyriar.sort-lines",
-    "simonsiefke.svg-preview",
-    "shd101wyy.markdown-preview-enhanced",
-    "tht13.html-preview-vscode"
   ]
 }
